Version 2.1.0-dev

[Updated] - Fix change build path.
          - Fix creating directories if not exists.

Version 2.0.9
26-11-2014

[Updated] - Fix setup.py to install configuration files after checksum.
          - Fix view slpkg config file.

Version 2.0.8
25-11-2014

[Updated] - Add more options in slpkg configuration file.

Version 2.0.7
22-11-2014

[Feature] - Add more option in slpkg.conf file.
          - Add slackware-mirrors file in /etc/slpkg

[Updated] - Fix upgrade Slackware packages if installed.

Version 2.0.6
18-11-2014

[Updated] - Fix setup.py file

Version 2.0.5
18-11-2014

[Feature] - Add /etc/slpkg.conf file.
          - Move "--current" switch in /etc/slpkg.conf file.
          - Add local PACKAGES.TXT for Slackware repository.
          - Add options to view package description.
          - Add all repositories in tracking dependencies options '-t'.
          - Add configuration file managment

[Updated] - Bugfix upgrading binary packages.

Version 2.0.4
07-11-2014

[Feature] - Add Robby Workman, Alien Bob (Eric Hameleers) and
            slacky.eu repositories.

[Updated] - Fix remove list reference.

Version 2.0.3
29-10-2014

[Updated] - Fix arguments.
          - Fix dpenedencies log.
          - Fix pydoc pager.
          - Fix list packaging paging.

Version 2.0.2
21-10-2014

[Updated] - Update source.

Version 2.0.1
20-10-2014

[Updated] - Bugfix md5 checksum failed.
          - Fix download all sources before build in view options.

Version 2.0.0
15-10-2014

[Updated] - Align PEP8 code style.
            Fix sbo arch.
            Update package splitting.

Version 1.9.9
11-10-2014

[Feature] - Added queue options.

Version 1.9.8
07-10-2014

[Updated] - Source code update.

Version 1.9.7
06-10-2014

[Updated] - Bugfix UnboundLocalError: local variable 'arch' referenced before assignment

Version 1.9.6
04-10-2014

[Updated] - Bugfix install packages from slack repo.

Version 1.9.5
04-10-2014

[Updated] - Added 'aaa_elflibs' in blacklist.