@@ -57,7 +57,7 @@ It's a quick and easy way to manage your packages in slackware to a command.
       -r, [package...]                          remove binary packages
       -d, [package...]                          display the contents
 
-    Repositories: <slack, sbo, alien, slacky, rlw>
+    Repositories: <slack, sbo, alien, slacky, rlw, studio>
     Colors = [red, green, yellow, cyan, grey]\fP
 
 .SH GLOBAL OPTIONS
