@@ -162,6 +162,31 @@ class Initialization(object):
         self.write(log, log_file, changelog_txt)
         self.remote(log, log_file, changelog_txt, lib, lib_file, packages_txt)
 
+    def studioware(self):
+        '''
+        Creating alien local library
+        '''
+        ar = ""
+        arch = os.uname()[4]
+        repo = Repo().studioware()
+        log = log_path + "studio/"
+        lib = lib_path + "studio_repo/"
+        lib_file = "PACKAGES.TXT"
+        log_file = "ChangeLog.txt"
+        if not os.path.exists(log):
+            os.mkdir(log)
+        if not os.path.exists(lib):
+            os.mkdir(lib)
+        if arch == "x86_64":
+            ar = "64"
+        packages_txt = "{0}slackware{1}-{2}/{3}".format(repo, ar, slack_ver(),
+                                                        lib_file)
+        changelog_txt = "{0}slackware{1}-{2}/{3}".format(repo, ar, slack_ver(),
+                                                         log_file)
+        self.write(lib, lib_file, packages_txt)
+        self.write(log, log_file, changelog_txt)
+        self.remote(log, log_file, changelog_txt, lib, lib_file, packages_txt)
+
     @staticmethod
     def write(path, files, file_url):
         '''
