@@ -35,6 +35,7 @@ def split_package(package):
     rlw = "_rlw"
     alien = "alien"
     slacky = "sl"
+    studio = "se"
     build = split[-1]
     if build.endswith(sbo):
         build = split[-1][:-4]   # and remove .t?z extension
@@ -46,6 +47,8 @@ def split_package(package):
         build = split[-1][:-len(alien)]
     elif build.endswith(slacky):
         build = split[-1][:-len(slacky)]
+    elif build.endswith(studio):
+        build = split[-1][:-len(studio)]
     arch = split[-2]
     ver = split[-3]
     name = "-".join(split[:-3])
